@@ -1,3 +1,7 @@
+drkns 18.09.2016 02:48:50 +0200 - build 4794
+
+1. Обход бага VS. Подробности - connect #3103404.
+
 drkns 17.09.2016 22:13:26 +0200 - build 4793
 
 1. constexpr.
